--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GamingHouse | Inicio</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
@@ -40,17 +41,17 @@
                     <div class="consolas-1-empresa">
                         <img src="./img/pslogo.jpg" alt="pslogo">
                         <h3>Playstation</h3>
-                        <a href="./pages/consolas.html" class="consolas-1-empresa-ps">Explorar</a>
+                        <a href="./pages/consolas.html #psn" class="consolas-1-empresa-ps">Explorar</a>
                     </div>
                     <div class="consolas-1-empresa">
                         <img src="./img/xboxlogo.jpg" alt="xboxlogo">
                         <h3>Xbox</h3>
-                        <a href="./pages/consolas.html" class="consolas-1-empresa-xbox">Explorar</a>
+                        <a href="./pages/consolas.html #xbx" class="consolas-1-empresa-xbox">Explorar</a>
                     </div>
                     <div class="consolas-1-empresa">
                         <img src="./img/nintendologo.jpg" alt="nintendologo">
                         <h3>Nintendo</h3>
-                        <a href="./pages/consolas.html" class="consolas-1-empresa-nintendo">Explorar</a>
+                        <a href="./pages/consolas.html #ntn" class="consolas-1-empresa-nintendo">Explorar</a>
                     </div>
                 </div>
             </section>
@@ -137,5 +138,7 @@
                 <p>Gmail: nicotrigalperez@gmail.com</p>
             </div>
         </footer>
+        <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
 </html>
