--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamingHouse | Consolas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -33,7 +34,7 @@
                 <h2 id="ps">Playstation</h2>
                 <img src="../img/pslogox.jpg" alt="pslogox">
             </div>
-            <div class="ps-2">
+            <div class="ps-2" id="psn">
                 <div class="ps-2-producto">
                     <img src="../img/ps5.png" alt="ps5">
                     <p>PlayStation 5</p>
@@ -54,7 +55,7 @@
                 </div>
             </div>
         </section>
-        <section class="xbox">
+        <section class="xbox" id="xbx">
             <div class="xbox-1">
                 <h2 id="xbox">Xbox</h2>
                 <img src="../img/xboxlogox.jpeg" alt="xboxlogox">
@@ -80,7 +81,7 @@
                 </div>
             </div>
         </section>
-        <section class="nintendo">
+        <section class="nintendo" id="ntn">
             <div class="nintendo-1">
                 <h2 id="nintendo">Nintendo</h2>
                 <img src="../img/nintendologox.png" alt="nintendologox">
@@ -120,5 +121,7 @@
             <p>Gmail: nicotrigalperez@gmail.com</p>
         </div>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
