--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -38,7 +38,8 @@
                 <div class="catalogo-2-1">
                     <div class="producto1">
                         <img src="../img/legostarw.jpg" alt="legostarw">
-                        <p>Lego Star Wars: Skywalker Saga PS5</p>
+                        <p>Lego Star Wars: </p>
+                        <p>Skywalker Saga PS5</p>
                         <p>$14.999</p>
                         <h3>Comprar</h3>
                     </div>
@@ -64,13 +65,15 @@
                     </div>
                     <div class="producto2">
                         <img src="../img/pokemon.jpg" alt="pokemon">
-                        <p>Pokemon Lets Go Pikachu Nintendo Switch</p>
+                        <p>Pokemon Lets Go Pikachu</p>
+                        <p>Nintendo Switch</p>
                         <p>$12.999</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto2">
                         <img src="../img/eldenring.jpg" alt="eldenring">
-                        <p>Elden Ring: Launch Edition PS4</p>
+                        <p>Elden Ring: Launch</p>
+                        <p>Edition PS4</p>
                         <p>$17.999</p>
                         <h3>Comprar</h3>
                     </div>
