--- a/index.html
+++ b/index.html
@@ -1,144 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>GamingHouse | Inicio</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <header>
-            <div class="header-1">
-                <div class="header-1-logo">
-                    <img src="./img/gamepad.png" alt="gamepad">
-                    <p> GamingHouse </p>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GamingHouse | Inicio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <header>
+            <nav class="navbar navbar-expand-lg bg-primary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href=""><img src="./img/gamepad.png" alt="logo" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Productos
+                                </a>
+                                <ul class="dropdown-menu bg-primary">
+                                    <li><a class="dropdown-item" href="./pages/consolas.html">Consolas</a></li>
+                                    <li><a class="dropdown-item" href="./pages/videojuegos.html">Videojuegos</a></li>
+                                    <li><a class="dropdown-item" href="./pages/productosvarios.html">Productos Varios</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#pie">Pie</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                            <button class="btn btn-outline-info" type="submit">Buscar</button>
+                        </form>
+                    </div>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a href="./index.html">| Inicio</a></li>
-                        <li><a href="./pages/consolas.html">| Consolas</a></li>
-                        <li><a href="./pages/videojuegos.html">| Videojuegos</a></li>
-                        <li><a href="./pages/productosvarios.html">| Productos Varios</a></li>
-                        <li><a href="./pages/contacto.html">| Contacto</a></li>
-                        <li><a href="#pie">| Pie</a></li>
-                    </ul>
-                </nav>
+            </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/ps4joystickblue.jpg" class="d-block w-100" alt=".joystickblue">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>| GamingHouse |</h5>
+                            <p>¡Todo lo que buscas de Gaming en un solo lugar!</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="./pages/videojuegos.html#off"><img src="./img/carousel2.jpg" class="d-block w-100" alt="carousel2"></a>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>| Ofertas en Videojuegos |</h5>
+                            <p>¡Revisá nuestras ofertas en Videojuegos!</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="./pages/productosvarios.html#off"><img src="./img/carousel3.jpeg" class="d-block w-100" alt="carousel3"></a>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>| Ofertas en Gaming |</h5>
+                            <p>¡Revisá nuestras ofertas en Componentes Gaming!</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-        </header>
-        <main>
-            <section class="hero">
-                <h1>| GamingHouse |</h1>
-                <h2>¡Todo lo que buscas de Gaming en un solo lugar!</h2>
-            </section>
-            <section class="consolas">
-                <div class="consolas-2">
-                    <h2>Consolas</h2>
-                    <p>En esta sección están las diferentes consolas y sus productos</p>
-                </div>
-                <div class="consolas-1">
-                    <div class="consolas-1-empresa">
-                        <img src="./img/pslogo.jpg" alt="pslogo">
-                        <h3>Playstation</h3>
-                        <a href="./pages/consolas.html#psn" class="consolas-1-empresa-ps">Explorar</a>
-                    </div>
-                    <div class="consolas-1-empresa">
-                        <img src="./img/xboxlogo.jpg" alt="xboxlogo">
-                        <h3>Xbox</h3>
-                        <a href="./pages/consolas.html#xbx" class="consolas-1-empresa-xbox">Explorar</a>
-                    </div>
-                    <div class="consolas-1-empresa">
-                        <img src="./img/nintendologo.jpg" alt="nintendologo">
-                        <h3>Nintendo</h3>
-                        <a href="./pages/consolas.html#ntn" class="consolas-1-empresa-nintendo">Explorar</a>
-                    </div>
-                </div>
-            </section>
-            <section class="video">
-                <div class="video-1">
-                    <h3>Video</h3>
-                    <p>Acá te compartimos la evolución de los startups de la consolas a lo largo del tiempo!</p>
-                </div>
-                <div class="video-2">
-                    <iframe class="video-2-caja" src="https://www.youtube.com/embed/Hru1FjQUkpI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </section>
-            <section>
-                <div class="videojuegos">
-                    <div class="videojuegos-2">
-                        <h2>Videojuegos</h2>
-                        <p>Aquí encontrarás los diferentes juegos que ofrece nuestro catálogo </p>
-                    </div>
-                    <div class="videojuegos-1">
-                        <img src="./img/videojuegos.jpg" alt="">
-                        <a href="./pages/videojuegos.html" class="videojuegos-1-button">Explorar</a>
-                    </div>
-                </div>
-            </section>
-            <section class="metodos">
-                <h3>Métodos de pago</h3>
-                <img src="./img/metodosp.png" alt="metodospago">
-            </section>
-            <section class="productosv">
-                <div class="productosv-2">
-                    <h2>Productos varios</h2>
-                    <p>Encuentra en esta sección productos varios relacionados al gaming que mejorarán tu experiencia</p>
-                </div>
-                <div class="productosv-1">
-                    <img src="./img/productosv.jpg" alt="productosvarios">
-                    <a href="./pages/productosvarios.html" class="productosv-1-button">Explorar</a>
-                </div>
-            </section>
-            <section class="galeria">
-                <div class="galeria-1">
-                    <h3>¡Te dejamos una galería de fotos con temática Gaming para tu fondo de escritorio!</h3>
-                </div>
-                <div class="galeria-2">
-                    <div class="foto">
-                        <a href="./img/gaming1.jpg" target="_blank"><img src="./img/gaming1.jpg" alt="gaming1"></a>
-                    </div>
-                    <div class="foto">
-                        <a href="./img/gaming2.jpg" target="_blank"><img src="./img/gaming2.jpg" alt="gaming2"></a>
-                    </div>
-                    <div class="foto">
-                        <a href="./img/gaming3.jpg" target="_blank"><img src="./img/gaming3.jpg" alt="gaming3"></a>
-                    </div>
-                    <div class="foto">
-                        <a href="./img/gaming4.png" target="_blank"><img src="./img/gaming4.png" alt="gaming4"></a>
-                    </div>
-                    <div class="foto">
-                        <a href="./img/gaming5.jpg" target="_blank"><img src="./img/gaming5.jpg" alt="gaming5"></a>
-                    </div>
-                    <div class="foto">
-                        <a href="./img/gaming6.jpg" target="_blank"><img src="./img/gaming6.jpg" alt="gaming6"></a>
-                    </div>
-                    <div class="foto">
-                        <a href="./img/gaming7.jpg" target="_blank"><img src="./img/gaming7.jpg" alt="gaming7"></a>
-                    </div>
-                    <div class="foto">
-                        <a href="./img/gaming8.jpg" target="_blank"><img src="./img/gaming8.jpg" alt="gaming8"></a>
-                    </div>
-                    <div class="foto">
-                        <a href="./img/gaming9.jpg" target="_blank"><img src="./img/gaming9.jpg" alt="gaming9"></a>
-                    </div>
-                </div>
-            </section>
-            <div class="fixed">
-                <a href="./index.html"><img src="./img/gamepad.png" alt="gamepad"></a>
+        </section>
+        <section class="consolas">
+            <div class="consolas-2">
+                <h2>Consolas</h2>
+                <p>En esta sección están las diferentes consolas y sus productos</p>
             </div>
-        </main>
-        <footer id="pie">
-            <div class="redes">
-                <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="./img/instagram.png" alt="instagram"></a>
-                <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="./img/whatsapp.png" alt="whatsapp"></a>
-                <a href="https://twitter.com/explore" target="_blank"><img src="./img/twitter.png" alt="twitter"></a>
+            <div class="consolas-1">
+                <div class="consolas-1-empresa">
+                    <img src="./img/pslogo.jpg" alt="pslogo">
+                    <h3>Playstation</h3>
+                    <a href="./pages/consolas.html#psn" class="consolas-1-empresa-ps">Explorar</a>
+                </div>
+                <div class="consolas-1-empresa">
+                    <img src="./img/xboxlogo.jpg" alt="xboxlogo">
+                    <h3>Xbox</h3>
+                    <a href="./pages/consolas.html#xbx" class="consolas-1-empresa-xbox">Explorar</a>
+                </div>
+                <div class="consolas-1-empresa">
+                    <img src="./img/nintendologo.jpg" alt="nintendologo">
+                    <h3>Nintendo</h3>
+                    <a href="./pages/consolas.html#ntn" class="consolas-1-empresa-nintendo">Explorar</a>
+                </div>
             </div>
-            <div class="mail">
-                <p>Gmail: nicotrigalperez@gmail.com</p>
+        </section>
+        <section class="video">
+            <div class="video-1">
+                <h3>Video</h3>
+                <p>Acá te compartimos la evolución de los startups de la consolas a lo largo del tiempo!</p>
             </div>
-        </footer>
-        <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    </body>
+            <div class="video-2">
+                <iframe class="video-2-caja" src="https://www.youtube.com/embed/Hru1FjQUkpI"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </section>
+        <section>
+            <div class="videojuegos">
+                <div class="videojuegos-2">
+                    <h2>Videojuegos</h2>
+                    <p>Aquí encontrarás los diferentes juegos que ofrece nuestro catálogo </p>
+                </div>
+                <div class="videojuegos-1">
+                    <img src="./img/videojuegos.jpg" alt="">
+                    <a href="./pages/videojuegos.html" class="videojuegos-1-button">Explorar</a>
+                </div>
+            </div>
+        </section>
+        <section class="metodos">
+            <h3>Métodos de pago</h3>
+            <img src="./img/metodosp.png" alt="metodospago">
+        </section>
+        <section class="productosv">
+            <div class="productosv-2">
+                <h2>Productos varios</h2>
+                <p>Encuentra en esta sección productos varios relacionados al gaming que mejorarán tu experiencia</p>
+            </div>
+            <div class="productosv-1">
+                <img src="./img/productosv.jpg" alt="productosvarios">
+                <a href="./pages/productosvarios.html" class="productosv-1-button">Explorar</a>
+            </div>
+        </section>
+        <section class="galeria">
+            <div class="galeria-1">
+                <h3>¡Te dejamos una galería de fotos con temática Gaming para tu fondo de escritorio!</h3>
+            </div>
+            <div class="galeria-2">
+                <div class="foto">
+                    <a href="./img/gaming1.jpg" target="_blank"><img src="./img/gaming1.jpg" alt="gaming1"></a>
+                </div>
+                <div class="foto">
+                    <a href="./img/gaming2.jpg" target="_blank"><img src="./img/gaming2.jpg" alt="gaming2"></a>
+                </div>
+                <div class="foto">
+                    <a href="./img/gaming3.jpg" target="_blank"><img src="./img/gaming3.jpg" alt="gaming3"></a>
+                </div>
+                <div class="foto">
+                    <a href="./img/gaming4.png" target="_blank"><img src="./img/gaming4.png" alt="gaming4"></a>
+                </div>
+                <div class="foto">
+                    <a href="./img/gaming5.jpg" target="_blank"><img src="./img/gaming5.jpg" alt="gaming5"></a>
+                </div>
+                <div class="foto">
+                    <a href="./img/gaming6.jpg" target="_blank"><img src="./img/gaming6.jpg" alt="gaming6"></a>
+                </div>
+                <div class="foto">
+                    <a href="./img/gaming7.jpg" target="_blank"><img src="./img/gaming7.jpg" alt="gaming7"></a>
+                </div>
+                <div class="foto">
+                    <a href="./img/gaming8.jpg" target="_blank"><img src="./img/gaming8.jpg" alt="gaming8"></a>
+                </div>
+                <div class="foto">
+                    <a href="./img/gaming9.jpg" target="_blank"><img src="./img/gaming9.jpg" alt="gaming9"></a>
+                </div>
+            </div>
+        </section>
+        <div class="fixed bg-primary">
+            <a href="./index.html"><img src="./img/gamepad.png" alt="gamepad"></a>
+        </div>
+    </main>
+    <footer class="piedepag bg-primary" id="pie">
+        <div class="redes">
+            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="./img/instagram.png"
+                    alt="instagram"></a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="./img/whatsapp.png"
+                    alt="whatsapp"></a>
+            <a href="https://twitter.com/explore" target="_blank"><img src="./img/twitter.png" alt="twitter"></a>
+        </div>
+        <div class="mail">
+            <p>Gmail: nicotrigalperez@gmail.com</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+</body>
 </html>
