--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -10,23 +10,45 @@
 </head>
 <body>
     <header>
-        <div class="header-1">
-            <div class="header-1-logo">
-                <img src="../img/gamepad.png" alt="gamepad">
-                <p> GamingHouse </p>
+        <nav class="navbar navbar-expand-lg bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="logo" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Productos
+                            </a>
+                            <ul class="dropdown-menu bg-primary">
+                                <li><a class="dropdown-item" href="./consolas.html">Consolas</a></li>
+                                <li><a class="dropdown-item" href="./videojuegos.html">Videojuegos</a></li>
+                                <li><a class="dropdown-item" href="./productosvarios.html">Productos Varios</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#pie">Pie</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                        <button class="btn btn-outline-info" type="submit">Buscar</button>
+                    </form>
+                </div>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">| Inicio</a></li>
-                    <li><a href="./consolas.html">| Consolas</a></li>
-                    <li><a href="./videojuegos.html">| Videojuegos</a></li>
-                    <li><a href="./productosvarios.html">| Productos Varios</a></li>
-                    <li><a href="./contacto.html">| Contacto</a></li>
-                    <li><a href="#pie">| Pie</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+        </nav>
+</header>
     <main>
         <h1>Bienvenido a la sección Consolas!</h1>
         <section class="ps">
@@ -107,11 +129,27 @@
                 </div>
             </div>
         </section>
-        <div class="fixed">
+        <div class="fixed bg-primary">
             <a href="../index.html"><img src="../img/gamepad.png" alt="gamepad"></a>
         </div>
+        <div class="importante">
+            <button type="button" class="btn btn-primary" id="liveToastBtn">Importante</button>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+            <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <img src="../img/gamepad.png" class="rounded me-2" alt="logo">
+                    <strong class="me-auto">GamingHouse</strong>
+                    <small>Hace 11 mins</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    Los precios de los productos pueden variar con el costo de envío.
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
-    <footer id="pie">
+    <footer class="piedepag bg-primary" id="pie">
         <div class="redes">
             <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a>
             <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp"></a>
@@ -121,7 +159,7 @@
             <p>Gmail: nicotrigalperez@gmail.com</p>
         </div>
     </footer>
-    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
