--- a/pages/productosvarios.html
+++ b/pages/productosvarios.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamingHouse | Prod.Extra</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
-        <div class="header-1">
-            <div class="header-1-logo">
-                <img src="../img/gamepad.png" alt="gamepad">
-                <p> GamingHouse </p>
+        <nav class="navbar navbar-expand-lg bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="logo" width="50" height="50"
+                        class="d-inline-block align-text-center">GamingHouse</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Productos
+                            </a>
+                            <ul class="dropdown-menu bg-primary">
+                                <li><a class="dropdown-item" href="./consolas.html">Consolas</a></li>
+                                <li><a class="dropdown-item" href="./videojuegos.html">Videojuegos</a></li>
+                                <li><a class="dropdown-item" href="./productosvarios.html">Productos Varios</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#pie">Pie</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                        <button class="btn btn-outline-info" type="submit">Buscar</button>
+                    </form>
+                </div>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">| Inicio</a></li>
-                    <li><a href="./consolas.html">| Consolas</a></li>
-                    <li><a href="./videojuegos.html">| Videojuegos</a></li>
-                    <li><a href="./productosvarios.html">| Productos Varios</a></li>
-                    <li><a href="./contacto.html">| Contacto</a></li>
-                    <li><a href="#pie">| Pie</a></li>
-                </ul>
-            </nav>
-        </div>
+        </nav>
     </header>
     <main>
         <h1>Bienvenido a la sección Productos Varios!</h1>
@@ -50,7 +76,7 @@
                     </div>
                     <div class="producto1">
                         <img src="../img/volante.jpg" alt="volante">
-                        <p>Volante Logitech</p>  
+                        <p>Volante Logitech</p>
                         <p>$69.999</p>
                         <h3>Comprar</h3>
                     </div>
@@ -64,7 +90,8 @@
                     </div>
                     <div class="producto2">
                         <img src="../img/teclado.jpg" alt="teclado">
-                        <p>Teclado Gamer Inalámbrico</p>
+                        <p>Teclado Gamer</p>
+                        <p>Inalámbrico</p>
                         <p>$24.999</p>
                         <h3>Comprar</h3>
                     </div>
@@ -76,8 +103,11 @@
                     </div>
                 </div>
             </div>
+            <div class="popover-boton">
+                <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="popover" data-bs-title="GamingHouse" data-bs-content="Contactanos via Gmail el producto que estás buscando y te lo facilitamos!">No encontraste lo que buscabas?</button>
+            </div>
         </section>
-        <section class="ofertas">
+        <section class="ofertas" id="off">
             <div class="ofertas-1">
                 <h2>¡Ofertas!</h2>
                 <img src="../img/ofertas.png" alt="ofertas">
@@ -102,22 +132,28 @@
                     </div>
                     <p>$14.200</p>
                     <h3>Comprar</h3>
+                </div>
             </div>
+            <div class="fixed bg-primary">
+                <a href="../index.html"><img src="../img/gamepad.png" alt="gamepad"></a>
             </div>
-        <div class="fixed">
-            <a href="../index.html"><img src="../img/gamepad.png" alt="gamepad"></a>
-        </div>
     </main>
-    <footer id="pie">
+    <footer class="piedepag bg-primary" id="pie">
         <div class="redes">
-            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp"></a>
+            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png"
+                    alt="instagram"></a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png"
+                    alt="whatsapp"></a>
             <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="twitter"></a>
         </div>
         <div class="mail">
             <p>Gmail: nicotrigalperez@gmail.com</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+        <script src="../script.js"></script>
 </body>
+
 </html>
