--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -78,6 +78,9 @@
                         <h3>Comprar</h3>
                     </div>
                 </div>
+                <div class="nuevo">
+                    <h5>Recién ingresados! <span class="badge bg-primary">New</span></h5>
+                </div>
                 <div class="catalogo-2-2">
                     <div class="producto2">
                         <img src="../img/halo.png" alt="halo">
