--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Revisá los productos disponibles relacionados al mundo de las consolas de las grandes empresas del momento!">
+    <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="GamingHouse | Consolas">
+    <!-- <meta property="og:url" content="">
+    <meta property="og:image" content=""> Falta la subida a servidor-->
+    <meta property="og:description" content="Revisá los productos disponibles relacionados al mundo de las consolas de las grandes empresas del momento!">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>GamingHouse | Consolas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="logo" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
+                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="Logo GamingHouse" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,27 +58,27 @@
         </nav>
 </header>
     <main>
-        <h1>Bienvenido a la sección Consolas!</h1>
+        <h1 class="titulo-1">| Consolas | Productos relacionados al mundo de las consolas</h1>
         <section class="ps">
             <div class="ps-1">
                 <h2 id="ps">Playstation</h2>
-                <img src="../img/pslogox.jpg" alt="pslogox">
+                <img src="../img/pslogox.jpg" alt="Logo PlayStation Circular">
             </div>
             <div class="ps-2" id="psn">
                 <div class="ps-2-producto">
-                    <img src="../img/ps5.png" alt="ps5">
+                    <img src="../img/ps5.png" alt="PlayStation 5">
                     <p>PlayStation 5</p>
                     <p>$199.999</p>
                     <h3>Comprar</h3>
                 </div>
                 <div class="ps-2-producto">
-                    <img src="../img/ps5joystick.jfif" alt="ps5joystick">
+                    <img src="../img/ps5joystick.jfif" alt="Ps5 Joystick">
                     <p>PlayStation 5 DualSense</p>
                     <p>$29.999</p>
                     <h3>Comprar</h3>
                 </div>
                 <div class="ps-2-producto">
-                    <img src="../img/psvr.jpg" alt="psvr">
+                    <img src="../img/psvr.jpg" alt="PlayStation VR">
                     <p>PlayStation VR</p>
                     <p>$94.999</p>
                     <h3>Comprar</h3>
@@ -80,23 +88,23 @@
         <section class="xbox" id="xbx">
             <div class="xbox-1">
                 <h2 id="xbox">Xbox</h2>
-                <img src="../img/xboxlogox.jpeg" alt="xboxlogox">
+                <img src="../img/xboxlogox.jpeg" alt="Logo Xbox Circular">
             </div>
             <div class="xbox-2">
                 <div class="xbox-2-producto">
-                    <img src="../img/xboxseriesx.jpg" alt="xboxseriesx">
+                    <img src="../img/xboxseriesx.jpg" alt="Xbox Series X">
                     <p>Xbox Series X</p>
                     <p>$189.999</p>
                     <h3>Comprar</h3>
                 </div>
                 <div class="xbox-2-producto">
-                    <img src="../img/xboxseriesxjoystick.jpg" alt="xboxseriesxjoystick">
+                    <img src="../img/xboxseriesxjoystick.jpg" alt="Xbox Series X Joystick">
                     <p>Xbox Series X Joystick</p>
                     <p>$22.999</p>
                     <h3>Comprar</h3>
                 </div>
                 <div class="xbox-2-producto">
-                    <img src="../img/xboxauriculares.jpg" alt="xboxauriculares">
+                    <img src="../img/xboxauriculares.jpg" alt="Auriculares Xbox">
                     <p>Auriculares Xbox</p>
                     <p>$17.999</p>
                     <h3>Comprar</h3>
@@ -106,23 +114,23 @@
         <section class="nintendo" id="ntn">
             <div class="nintendo-1">
                 <h2 id="nintendo">Nintendo</h2>
-                <img src="../img/nintendologox.png" alt="nintendologox">
+                <img src="../img/nintendologox.png" alt="Logo Nintendo Circular">
             </div>
             <div class="nintendo-2">
                 <div class="nintendo-2-producto">
-                    <img src="../img/nintendoswitch.png" alt="nintendoswitch">
+                    <img src="../img/nintendoswitch.png" alt="Nintendo Switch">
                     <p>Nintendo Switch</p>
                     <p>$139.999</p>
                     <h3>Comprar</h3>
                 </div>
                 <div class="nintendo-2-producto">
-                    <img src="../img/joycon.jpg" alt="joycon">
+                    <img src="../img/joycon.jpg" alt="Nintendo Switch Joycon">
                     <p>Nintendo Switch Joycon</p>
                     <p>$37.999</p>
                     <h3>Comprar</h3>
                 </div>
                 <div class="nintendo-2-producto">
-                    <img src="../img/nintendojoystick.jpg" alt="nintendojoystick">
+                    <img src="../img/nintendojoystick.jpg" alt="Nintendo Joystick">
                     <p>Nintendo Switch Joystick</p>
                     <p>$24.999</p>
                     <h3>Comprar</h3>
@@ -130,14 +138,14 @@
             </div>
         </section>
         <div class="fixed bg-primary">
-            <a href="../index.html"><img src="../img/gamepad.png" alt="gamepad"></a>
+            <a href="../index.html"><img src="../img/gamepad.png" alt="Logo GamingHouse"></a>
         </div>
         <div class="importante">
             <button type="button" class="btn btn-primary" id="liveToastBtn">Importante</button>
         <div class="toast-container position-fixed bottom-0 end-0 p-3">
             <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header">
-                    <img src="../img/gamepad.png" class="rounded me-2" alt="logo">
+                    <img src="../img/gamepad.png" class="rounded me-2" alt="Logo GamingHouse">
                     <strong class="me-auto">GamingHouse</strong>
                     <small>Hace 11 mins</small>
                     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -151,9 +159,9 @@
     </main>
     <footer class="piedepag bg-primary" id="pie">
         <div class="redes">
-            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp"></a>
-            <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="twitter"></a>
+            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png" alt="Whatsapp"></a>
+            <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="Twitter"></a>
         </div>
         <div class="mail">
             <p>Gmail: nicotrigalperez@gmail.com</p>
