--- a/pages/productosvarios.html
+++ b/pages/productosvarios.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GamingHouse | Prod.Extra</title>
+    <meta name="description" content="Revisá nuestro catálogo y nuestras ofertas que ofrecen productos Gaming que te permitirán vivir una experiencia increíble en el mundo del Gaming">
+    <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="GamingHouse | Productos Gaming">
+    <!-- <meta property="og:url" content="">
+    <meta property="og:image" content=""> Falta la subida a servidor-->
+    <meta property="og:description" content="Revisá nuestro catálogo y nuestras ofertas que ofrecen productos Gaming que te permitirán vivir una experiencia increíble en el mundo del Gaming">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <title>GamingHouse | Productos Gaming</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -15,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="logo" width="50" height="50"
+                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="Logo GamingHouse" width="50" height="50"
                         class="d-inline-block align-text-center">GamingHouse</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -54,28 +62,28 @@
         </nav>
     </header>
     <main>
-        <h1>Bienvenido a la sección Productos Varios!</h1>
+        <h1 class="titulo-2">| Productos Varios | Productos para mejorar tu experiencia Gaming en PC</h1>
         <section class="catalogo">
             <div class="catalogo-1">
                 <h2>Catálogo</h2>
-                <img src="../img/productosvar.jpg" alt="productosvarios">
+                <img src="../img/productosvar.jpg" alt="Logo Productos Varios">
             </div>
             <div class="catalogo-2">
                 <div class="catalogo-2-1">
                     <div class="producto1">
-                        <img src="../img/monitor.jpg" alt="monitor">
+                        <img src="../img/monitor.jpg" alt="Monitor Led Samsung">
                         <p>Monitor Led Samsung</p>
                         <p>$39.999</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto1">
-                        <img src="../img/sillagamer.jpg" alt="sillagamer">
+                        <img src="../img/sillagamer.jpg" alt="Silla Gamer Orcus">
                         <p>Silla Gamer Orcus Azul</p>
                         <p>$43.500</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto1">
-                        <img src="../img/volante.jpg" alt="volante">
+                        <img src="../img/volante.jpg" alt="Volante">
                         <p>Volante Logitech</p>
                         <p>$69.999</p>
                         <h3>Comprar</h3>
@@ -83,20 +91,20 @@
                 </div>
                 <div class="catalogo-2-2">
                     <div class="producto2">
-                        <img src="../img/tablet.jpg" alt="tablet">
+                        <img src="../img/tablet.jpg" alt="Tablet Gamer">
                         <p>Tablet Gamer Kassel</p>
                         <p>$48.100</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto2">
-                        <img src="../img/teclado.jpg" alt="teclado">
+                        <img src="../img/teclado.jpg" alt="Teclado">
                         <p>Teclado Gamer</p>
                         <p>Inalámbrico</p>
                         <p>$24.999</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto2">
-                        <img src="../img/mouse.jpg" alt="mouse">
+                        <img src="../img/mouse.jpg" alt="Mouse">
                         <p>Mouse Gamer</p>
                         <p>$7.999</p>
                         <h3>Comprar</h3>
@@ -110,11 +118,11 @@
         <section class="ofertas" id="off">
             <div class="ofertas-1">
                 <h2>¡Ofertas!</h2>
-                <img src="../img/ofertas.png" alt="ofertas">
+                <img src="../img/ofertas.png" alt="Ofertas">
             </div>
             <div class="ofertas-2">
                 <div class="oferta">
-                    <img src="../img/auriculares.jpg" alt="auriculares">
+                    <img src="../img/auriculares.jpg" alt="Auriculares">
                     <p>Auriculares Gaming</p>
                     <div class="tachado">
                         <p class="descuento">$18.000 </p>
@@ -124,7 +132,7 @@
                     <h3>Comprar</h3>
                 </div>
                 <div class="oferta">
-                    <img src="../img/microfono.jpg" alt="microfono">
+                    <img src="../img/microfono.jpg" alt="Microfono">
                     <p>Microfono HyperX</p>
                     <div class="tachado">
                         <p class="descuento">$24.000 </p>
@@ -135,16 +143,16 @@
                 </div>
             </div>
             <div class="fixed bg-primary">
-                <a href="../index.html"><img src="../img/gamepad.png" alt="gamepad"></a>
+                <a href="../index.html"><img src="../img/gamepad.png" alt="Logo GamingHouse"></a>
             </div>
     </main>
     <footer class="piedepag bg-primary" id="pie">
         <div class="redes">
             <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png"
-                    alt="instagram"></a>
+                    alt="Instagram"></a>
             <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png"
-                    alt="whatsapp"></a>
-            <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="twitter"></a>
+                    alt="Whatsapp"></a>
+            <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="Twitter"></a>
         </div>
         <div class="mail">
             <p>Gmail: nicotrigalperez@gmail.com</p>
