--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Revisá nuestro catálogo y nuestras ofertas que ofrecen los videojuegos del momento que te permitirán vivir historias y una experiencia multijugador inolvidable!">
+    <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="GamingHouse | Videojuegos">
+    <!-- <meta property="og:url" content="">
+    <meta property="og:image" content=""> Falta la subida a servidor-->
+    <meta property="og:description" content="Revisá nuestro catálogo y nuestras ofertas que ofrecen los videojuegos del momento que te permitirán vivir historias y una experiencia multijugador inolvidable!">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>GamingHouse | Videojuegos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="logo" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
+                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="Logo GamingHouse" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,29 +58,29 @@
         </nav>
     </header>
     <main>
-        <h1>Bienvenidos a la sección Videojuegos!</h1>
+        <h1 class="titulo-2">| Videojuegos | Titulos tendencia del momento para consola</h1>
         <section class="catalogo">
             <div class="catalogo-1">
                 <h2>Catálogo</h2>
-                <img src="../img/videojuegoslogo.jpeg" alt="videojuegoslogo">
+                <img src="../img/videojuegoslogo.jpeg" alt="Logo Videojuegos">
             </div>
             <div class="catalogo-2">
                 <div class="catalogo-2-1">
                     <div class="producto1">
-                        <img src="../img/legostarw.jpg" alt="legostarw">
+                        <img src="../img/legostarw.jpg" alt="Lego Star Wars SS">
                         <p>Lego Star Wars: </p>
                         <p>Skywalker Saga PS5</p>
                         <p>$14.999</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto1">
-                        <img src="../img/minecraft.jpg" alt="minecraft">
+                        <img src="../img/minecraft.jpg" alt="Minecraft">
                         <p>Minecraft PS4</p>
                         <p>$3.500</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto1">
-                        <img src="../img/gtav.jpg" alt="gtav">
+                        <img src="../img/gtav.jpg" alt="Gta V">
                         <p>GTA V: Premium Edition PS4</p>  
                         <p>$5.999</p>
                         <h3>Comprar</h3>
@@ -83,20 +91,20 @@
                 </div>
                 <div class="catalogo-2-2">
                     <div class="producto2">
-                        <img src="../img/halo.png" alt="halo">
+                        <img src="../img/halo.png" alt="Halo Infinite">
                         <p>Halo Infinite Xbox One</p>
                         <p>$8.100</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto2">
-                        <img src="../img/pokemon.jpg" alt="pokemon">
+                        <img src="../img/pokemon.jpg" alt="Pokemon">
                         <p>Pokemon Lets Go Pikachu</p>
                         <p>Nintendo Switch</p>
                         <p>$12.999</p>
                         <h3>Comprar</h3>
                     </div>
                     <div class="producto2">
-                        <img src="../img/eldenring.jpg" alt="eldenring">
+                        <img src="../img/eldenring.jpg" alt="Elden Ring">
                         <p>Elden Ring: Launch</p>
                         <p>Edition PS4</p>
                         <p>$17.999</p>
@@ -111,11 +119,11 @@
         <section class="ofertas" id="off">
             <div class="ofertas-1">
                 <h2>¡Ofertas!</h2>
-                <img src="../img/ofertas.png" alt="ofertas">
+                <img src="../img/ofertas.png" alt="Ofertas">
             </div>
             <div class="ofertas-2">
                 <div class="oferta">
-                    <img src="../img/dbzkakarot.jpg" alt="dbzkakarot">
+                    <img src="../img/dbzkakarot.jpg" alt="DBZ Kakarot">
                     <p>DBZ Kakarot PS4</p>
                     <div class="tachado">
                         <p class="descuento">$7.000 </p>
@@ -125,7 +133,7 @@
                     <h3>Comprar</h3>
                 </div>
                 <div class="oferta">
-                    <img src="../img/fifa22.jpg" alt="fifa22">
+                    <img src="../img/fifa22.jpg" alt="Fifa 22">
                     <p>Fifa 22 PS4</p>
                     <div class="tachado">
                         <p class="descuento">$8.000 </p>
@@ -137,14 +145,14 @@
             </div>
         </section>
         <div class="fixed bg-primary">
-            <a href="../index.html"><img src="../img/gamepad.png" alt="gamepad"></a>
+            <a href="../index.html"><img src="../img/gamepad.png" alt="Logo GamingHouse"></a>
         </div>
     </main>
     <footer class="piedepag bg-primary" id="pie">
         <div class="redes">
-            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp"></a>
-            <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="twitter"></a>
+            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png" alt="Whatsapp"></a>
+            <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="Twitter"></a>
         </div>
         <div class="mail">
             <p>Gmail: nicotrigalperez@gmail.com</p>
