--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GamingHouse | Inicio</title>
+    <meta name="description" content="Aquí encontrarás todo lo que necesitas para el mundo del Gaming. Ofrecemos venta de consolas, videojuegos y productos Gaming originales! No te pierdas nuestras ofertas. Envíos a todo Buenos Aires.">
+    <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="GamingHouse | Inicio - Todo lo necesario para Gaming!">
+    <!-- <meta property="og:url" content="">
+    <meta property="og:image" content=""> Falta la subida a servidor-->
+    <meta property="og:description" content="Aquí encontrarás todo lo que necesitas para el mundo del Gaming. Ofrecemos venta de consolas, videojuegos y productos Gaming originales! No te pierdas nuestras ofertas. Envíos a todo Buenos Aires.">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <title>GamingHouse | Inicio - Todo lo necesario para Gaming!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -14,7 +22,7 @@
     <header>
             <nav class="navbar navbar-expand-lg bg-primary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href=""><img src="./img/gamepad.png" alt="logo" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
+                    <a class="navbar-brand" href=""><img src="./img/gamepad.png" alt="Logo GamingHouse" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -64,21 +72,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/ps4joystickblue.jpg" class="d-block w-100" alt=".joystickblue">
+                        <img src="./img/ps4joystickblue.jpg" class="d-block w-100" alt="Carousel 1">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>| GamingHouse |</h5>
                             <p>¡Todo lo que buscas de Gaming en un solo lugar!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a href="./pages/videojuegos.html#off"><img src="./img/carousel2.jpg" class="d-block w-100" alt="carousel2"></a>
+                        <a href="./pages/videojuegos.html#off"><img src="./img/carousel2.jpg" class="d-block w-100" alt="Carousel 2"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>| Ofertas en Videojuegos |</h5>
                             <p>¡Revisá nuestras ofertas en Videojuegos!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a href="./pages/productosvarios.html#off"><img src="./img/carousel3.jpeg" class="d-block w-100" alt="carousel3"></a>
+                        <a href="./pages/productosvarios.html#off"><img src="./img/carousel3.jpeg" class="d-block w-100" alt="Carousel 3"></a>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>| Ofertas en Gaming |</h5>
                             <p>¡Revisá nuestras ofertas en Componentes Gaming!</p>
@@ -97,6 +105,9 @@
                 </button>
             </div>
         </section>
+        <div class="texto-buscador">
+            <h1>GamingHouse | Todo lo necesario para Gaming en un solo lugar</h1>
+        </div>
         <section class="consolas">
             <div class="consolas-2">
                 <h2>Consolas</h2>
@@ -104,17 +115,17 @@
             </div>
             <div class="consolas-1">
                 <div class="consolas-1-empresa">
-                    <img src="./img/pslogo.jpg" alt="pslogo">
+                    <img src="./img/pslogo.jpg" alt="Logo PlayStation">
                     <h3>Playstation</h3>
                     <a href="./pages/consolas.html#psn" class="consolas-1-empresa-ps">Explorar</a>
                 </div>
                 <div class="consolas-1-empresa">
-                    <img src="./img/xboxlogo.jpg" alt="xboxlogo">
+                    <img src="./img/xboxlogo.jpg" alt="Logo Xbox">
                     <h3>Xbox</h3>
                     <a href="./pages/consolas.html#xbx" class="consolas-1-empresa-xbox">Explorar</a>
                 </div>
                 <div class="consolas-1-empresa">
-                    <img src="./img/nintendologo.jpg" alt="nintendologo">
+                    <img src="./img/nintendologo.jpg" alt="Logo Nintendo">
                     <h3>Nintendo</h3>
                     <a href="./pages/consolas.html#ntn" class="consolas-1-empresa-nintendo">Explorar</a>
                 </div>
@@ -127,7 +138,7 @@
             </div>
             <div class="video-2">
                 <iframe class="video-2-caja" src="https://www.youtube.com/embed/Hru1FjQUkpI"
-                    title="YouTube video player" frameborder="0"
+                    title="Video Startups Consolas" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
@@ -139,14 +150,14 @@
                     <p>Aquí encontrarás los diferentes juegos que ofrece nuestro catálogo </p>
                 </div>
                 <div class="videojuegos-1">
-                    <img src="./img/videojuegos.jpg" alt="">
+                    <img src="./img/videojuegos.jpg" alt="Fondo de Videojuegos">
                     <a href="./pages/videojuegos.html" class="videojuegos-1-button">Explorar</a>
                 </div>
             </div>
         </section>
         <section class="metodos">
             <h3>Métodos de pago</h3>
-            <img src="./img/metodosp.png" alt="metodospago">
+            <img src="./img/metodosp.png" alt="Metodos de Pago">
         </section>
         <section class="productosv">
             <div class="productosv-2">
@@ -164,45 +175,45 @@
             </div>
             <div class="galeria-2">
                 <div class="foto">
-                    <a href="./img/gaming1.jpg" target="_blank"><img src="./img/gaming1.jpg" alt="gaming1"></a>
+                    <a href="./img/gaming1.jpg" target="_blank"><img src="./img/gaming1.jpg" alt="Fondo de Escritorio 1"></a>
                 </div>
                 <div class="foto">
-                    <a href="./img/gaming2.jpg" target="_blank"><img src="./img/gaming2.jpg" alt="gaming2"></a>
+                    <a href="./img/gaming2.jpg" target="_blank"><img src="./img/gaming2.jpg" alt="Fondo de Escritorio 2"></a>
                 </div>
                 <div class="foto">
-                    <a href="./img/gaming3.jpg" target="_blank"><img src="./img/gaming3.jpg" alt="gaming3"></a>
+                    <a href="./img/gaming3.jpg" target="_blank"><img src="./img/gaming3.jpg" alt="Fondo de Escritorio 3"></a>
                 </div>
                 <div class="foto">
-                    <a href="./img/gaming4.png" target="_blank"><img src="./img/gaming4.png" alt="gaming4"></a>
+                    <a href="./img/gaming4.png" target="_blank"><img src="./img/gaming4.png" alt="Fondo de Escritorio 4"></a>
                 </div>
                 <div class="foto">
-                    <a href="./img/gaming5.jpg" target="_blank"><img src="./img/gaming5.jpg" alt="gaming5"></a>
+                    <a href="./img/gaming5.jpg" target="_blank"><img src="./img/gaming5.jpg" alt="Fondo de Escritorio 5"></a>
                 </div>
                 <div class="foto">
-                    <a href="./img/gaming6.jpg" target="_blank"><img src="./img/gaming6.jpg" alt="gaming6"></a>
+                    <a href="./img/gaming6.jpg" target="_blank"><img src="./img/gaming6.jpg" alt="Fondo de Escritorio 6"></a>
                 </div>
                 <div class="foto">
-                    <a href="./img/gaming7.jpg" target="_blank"><img src="./img/gaming7.jpg" alt="gaming7"></a>
+                    <a href="./img/gaming7.jpg" target="_blank"><img src="./img/gaming7.jpg" alt="Fondo de Escritorio 7"></a>
                 </div>
                 <div class="foto">
-                    <a href="./img/gaming8.jpg" target="_blank"><img src="./img/gaming8.jpg" alt="gaming8"></a>
+                    <a href="./img/gaming8.jpg" target="_blank"><img src="./img/gaming8.jpg" alt="Fondo de Escritorio 8"></a>
                 </div>
                 <div class="foto">
-                    <a href="./img/gaming9.jpg" target="_blank"><img src="./img/gaming9.jpg" alt="gaming9"></a>
+                    <a href="./img/gaming9.jpg" target="_blank"><img src="./img/gaming9.jpg" alt="Fondo de Escritorio 9"></a>
                 </div>
             </div>
         </section>
         <div class="fixed bg-primary">
-            <a href="./index.html"><img src="./img/gamepad.png" alt="gamepad"></a>
+            <a href="./index.html"><img src="./img/gamepad.png" alt="Logo GamingHouse"></a>
         </div>
     </main>
     <footer class="piedepag bg-primary" id="pie">
         <div class="redes">
             <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="./img/instagram.png"
-                    alt="instagram"></a>
+                    alt="Instagram"></a>
             <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="./img/whatsapp.png"
-                    alt="whatsapp"></a>
-            <a href="https://twitter.com/explore" target="_blank"><img src="./img/twitter.png" alt="twitter"></a>
+                    alt="Whatsapp"></a>
+            <a href="https://twitter.com/explore" target="_blank"><img src="./img/twitter.png" alt="Twitter"></a>
         </div>
         <div class="mail">
             <p>Gmail: nicotrigalperez@gmail.com</p>
