--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ingresá y envia los datos de tu Usuario para poder realizar la compra y recibir tu producto cuanto antes!">
+    <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="GamingHouse | Contacto">
+    <!-- <meta property="og:url" content="">
+    <meta property="og:image" content=""> Falta la subida a servidor-->
+    <meta property="og:description" content="Ingresá y envia los datos de tu Usuario para poder realizar la compra y recibir tu producto cuanto antes!">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>GamingHouse | Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="logo" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
+                <a class="navbar-brand" href="#"><img src="../img/gamepad.png" alt="Logo GamingHouse" width="50" height="50" class="d-inline-block align-text-center">GamingHouse</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +58,7 @@
         </nav>
     </header>
     <main>
-            <h1>Datos del Usuario:</h1>
+            <h1 class="titulo-3">Datos de Usuario:</h1>
             <div class="row">
                 <div class="col">
                 <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
@@ -93,14 +101,14 @@
                 </div>
                     </form>
             <div class="fixed bg-primary">
-                <a href="../index.html"><img src="../img/gamepad.png" alt="gamepad"></a>
+                <a href="../index.html"><img src="../img/gamepad.png" alt="Logo GamingHouse"></a>
             </div>
     </main>
     <footer class="piedepag bg-primary" id="pie">
         <div class="redes">
-            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp"></a>
-            <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="twitter"></a>
+            <a href="https://www.instagram.com/trigal.nico/" target="_blank"><img src="../img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><img src="../img/whatsapp.png" alt="Whatsapp"></a>
+            <a href="https://twitter.com/explore" target="_blank"><img src="../img/twitter.png" alt="Twitter"></a>
         </div>
         <div class="mail">
             <p>Gmail: nicotrigalperez@gmail.com</p>
