--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
     <meta property="og:type" content="Web Site">
     <meta property="og:title" content="GamingHouse | Videojuegos">
-    <!-- <meta property="og:url" content="">
-    <meta property="og:image" content=""> Falta la subida a servidor-->
+    <meta property="og:url" content="https://gaminghousecoder.000webhostapp.com/">
+    <meta property="og:image" content="../img/gamepad.png">
     <meta property="og:description" content="Revisá nuestro catálogo y nuestras ofertas que ofrecen los videojuegos del momento que te permitirán vivir historias y una experiencia multijugador inolvidable!">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>GamingHouse | Videojuegos</title>
