--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
     <meta property="og:type" content="Web Site">
     <meta property="og:title" content="GamingHouse | Inicio - Todo lo necesario para Gaming!">
-    <!-- <meta property="og:url" content="">
-    <meta property="og:image" content=""> Falta la subida a servidor-->
+    <meta property="og:url" content="https://gaminghousecoder.000webhostapp.com/">
+    <meta property="og:image" content="./img/gamepad.png">
     <meta property="og:description" content="Aquí encontrarás todo lo que necesitas para el mundo del Gaming. Ofrecemos venta de consolas, videojuegos y productos Gaming originales! No te pierdas nuestras ofertas. Envíos a todo Buenos Aires.">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>GamingHouse | Inicio - Todo lo necesario para Gaming!</title>
