--- a/pages/productosvarios.html
+++ b/pages/productosvarios.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
     <meta property="og:type" content="Web Site">
     <meta property="og:title" content="GamingHouse | Productos Gaming">
-    <!-- <meta property="og:url" content="">
-    <meta property="og:image" content=""> Falta la subida a servidor-->
+    <meta property="og:url" content="https://gaminghousecoder.000webhostapp.com/">
+    <meta property="og:image" content="../img/gamepad.png">
     <meta property="og:description" content="Revisá nuestro catálogo y nuestras ofertas que ofrecen productos Gaming que te permitirán vivir una experiencia increíble en el mundo del Gaming">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>GamingHouse | Productos Gaming</title>
