--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="gaming, consolas, videojuegos, original, tienda, envio, comprar, ofertas, barato, pc, ordenador, streaming, playstation, xbox, nintendo, joystick, microfono, teclado, mouse, simulador">
     <meta property="og:type" content="Web Site">
     <meta property="og:title" content="GamingHouse | Videojuegos">
-    <meta property="og:url" content="https://gaminghousecoder.000webhostapp.com/">
+    <meta property="og:url" content="https://gaminghouse.netlify.app/">
     <meta property="og:image" content="../img/gamepad.png">
     <meta property="og:description" content="Revisá nuestro catálogo y nuestras ofertas que ofrecen los videojuegos del momento que te permitirán vivir historias y una experiencia multijugador inolvidable!">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
